--- a/ShopAdminApp/ShopAdminApp.iOS/ShopAdminApp.iOS.csproj
+++ b/ShopAdminApp/ShopAdminApp.iOS/ShopAdminApp.iOS.csproj
@@ -123,8 +123,8 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2622" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.8.1" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
@@ -132,5 +132,9 @@
       <Project>{12EAF125-58FB-4E52-B5FD-24B6780C0CC5}</Project>
       <Name>ShopAdminApp</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\hamburger%402x.png" />
+    <BundleResource Include="Resources\hamburger.png" />
   </ItemGroup>
 </Project>
