--- a/ShopAdminApp/ShopAdminApp.iOS/ShopAdminApp.iOS.csproj
+++ b/ShopAdminApp/ShopAdminApp.iOS/ShopAdminApp.iOS.csproj
@@ -129,6 +129,9 @@
     <PackageReference Include="Microcharts.Forms">
       <Version>0.9.5.9</Version>
     </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>13.0.3</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
