--- a/ShopAdminApp/ShopAdminApp.Android/ShopAdminApp.Android.csproj
+++ b/ShopAdminApp/ShopAdminApp.Android/ShopAdminApp.Android.csproj
@@ -63,6 +63,9 @@
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.3</Version>
     </PackageReference>
+    <PackageReference Include="Xam.Plugin.Connectivity">
+      <Version>3.2.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
