--- a/ShopAdminApp/ShopAdminApp.iOS/ShopAdminApp.iOS.csproj
+++ b/ShopAdminApp/ShopAdminApp.iOS/ShopAdminApp.iOS.csproj
@@ -132,6 +132,9 @@
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.3</Version>
     </PackageReference>
+    <PackageReference Include="Xam.Plugin.Connectivity">
+      <Version>3.2.0</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
