--- a/ShopAdminApp/ShopAdminApp/ShopAdminApp.csproj
+++ b/ShopAdminApp/ShopAdminApp/ShopAdminApp.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Xamarin.Essentials" Version="1.8.1" />
     <PackageReference Include="Microcharts.Forms" Version="0.9.5.9" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Xam.Plugin.Connectivity" Version="3.2.0" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Services\" />
