--- a/ShopAdminApp/ShopAdminApp.Android/Properties/AndroidManifest.xml
+++ b/ShopAdminApp/ShopAdminApp.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="2.0" package="com.demo.shopadminapp" android:versionCode="2">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="4.0" package="com.demo.shopadminapp" android:versionCode="4">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="33" />
-	<application android:label="ShopAdminApp.Android" android:theme="@style/MainTheme"></application>
+	<application android:label="ShopAdminApp.Android" android:theme="@style/MainTheme" android:icon="@mipmap/icon"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
