--- a/ShopAdminApp/ShopAdminApp.iOS/ShopAdminApp.iOS.csproj
+++ b/ShopAdminApp/ShopAdminApp.iOS/ShopAdminApp.iOS.csproj
@@ -69,6 +69,8 @@
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <None Include="Resources\password.png" />
+    <None Include="Resources\user.png" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
@@ -114,6 +116,7 @@
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon20.png">
       <Visible>false</Visible>
     </ImageAsset>
+    <ImageAsset Include="Assets.xcassets\Contents.json" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -135,6 +138,9 @@
     <PackageReference Include="Xam.Plugin.Connectivity">
       <Version>3.2.0</Version>
     </PackageReference>
+    <PackageReference Include="System.ComponentModel.Annotations">
+      <Version>5.0.0</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
@@ -146,5 +152,18 @@
   <ItemGroup>
     <BundleResource Include="Resources\hamburger%402x.png" />
     <BundleResource Include="Resources\hamburger.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\default_user.png" />
+    <AndroidResource Include="Resources\category.png" />
+    <AndroidResource Include="Resources\dashboard.png" />
+    <AndroidResource Include="Resources\logout.png" />
+    <AndroidResource Include="Resources\product.png" />
+    <AndroidResource Include="Resources\settings.png" />
+    <AndroidResource Include="Resources\status.png" />
+    <AndroidResource Include="Resources\users.png" />
+    <AndroidResource Include="Resources\order.png" />
+    <AndroidResource Include="Resources\login_logo.png" />
+    <AndroidResource Include="Resources\splash_logo.png" />
   </ItemGroup>
 </Project>
