--- a/ShopAdminApp/ShopAdminApp.Android/Properties/AndroidManifest.xml
+++ b/ShopAdminApp/ShopAdminApp.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="4.0" package="com.demo.shopadminapp" android:versionCode="4">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.demo.shopadminapp" android:versionCode="4" android:versionName="1.4">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="33" />
 	<application android:label="ShopAdminApp.Android" android:theme="@style/MainTheme" android:icon="@mipmap/icon"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
