--- a/ShopAdminApp/ShopAdminApp.Android/ShopAdminApp.Android.csproj
+++ b/ShopAdminApp/ShopAdminApp.Android/ShopAdminApp.Android.csproj
@@ -47,6 +47,8 @@
     <AndroidManagedSymbols>true</AndroidManagedSymbols>
     <EmbedAssembliesIntoApk>true</EmbedAssembliesIntoApk>
     <AndroidPackageFormat>aab</AndroidPackageFormat>
+    <AndroidSupportedAbis>armeabi-v7a;arm64-v8a;x86;x86_64</AndroidSupportedAbis>
+    <AndroidLinkTool>r8</AndroidLinkTool>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Mono.Android" />
