--- a/ShopAdminApp/ShopAdminApp/ShopAdminApp.csproj
+++ b/ShopAdminApp/ShopAdminApp/ShopAdminApp.csproj
@@ -28,11 +28,13 @@
     <None Remove="Services\" />
     <None Remove="Pages\" />
     <None Remove="Models\" />
+    <None Remove="Converters\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Services\" />
     <Folder Include="Pages\" />
     <Folder Include="Models\" />
+    <Folder Include="Converters\" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Xamarin.iOS">
