--- a/ShopAdminApp/ShopAdminApp.Android/Properties/AndroidManifest.xml
+++ b/ShopAdminApp/ShopAdminApp.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.demo.shopadminapp" android:versionName="1.0.8" android:versionCode="8">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.demo.shopadminapp" android:versionName="1.0.9" android:versionCode="9">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="33" />
-	<application android:label="ShopAdminApp.Android" android:theme="@style/MainTheme" android:icon="@mipmap/icon"></application>
+	<application android:label="Shop Admin" android:theme="@style/MainTheme" android:icon="@drawable/splash_logo"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
